--- a/notebooks/13_Model.ipynb
+++ b/notebooks/13_Model.ipynb
@@ -539,7 +539,7 @@
     }
    ],
    "source": [
-    "joblib.dump(label_encoder, 'label_encoder.pkl')"
+    "joblib.dump(label_encoder, '../model/label_encoder.pkl')"
    ]
   },
   {
@@ -560,7 +560,7 @@
     }
    ],
    "source": [
-    "joblib.dump(qda_model, 'qda_model.pkl')"
+    "joblib.dump(qda_model, '../model/qda_model.pkl')"
    ]
   },
   {
